fix: atualizando todo o persistente