@@ -7,8 +7,8 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -25,10 +25,29 @@ public class WaitlistPersistenceAdapter implements IWaitlistRepository {
     }
 
     @Override
-    public List<Waitlist> findAllByProfessionalAndDate(String professionalId, LocalDate date) {
-        return repository.findActiveByProfessionalAndDate(UUID.fromString(professionalId), date)
+    public Optional<Waitlist> findById(UUID id) {
+        return repository.findById(id)
+                .map(mapper::toDomain);
+    }
+
+    @Override
+    public List<Waitlist> findAllByProfessionalIdAndDate(UUID professionalId, LocalDate date) {
+        return repository.findAllByProfessionalIdAndDesiredDateAndNotifiedFalseOrderByRequestTimeAsc(professionalId, date)
                 .stream()
                 .map(mapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public List<Waitlist> findAllByProviderId(UUID providerId) {
+        return repository.findAllByServiceProviderIdAndNotifiedFalseOrderByRequestTimeDesc(providerId)
+                .stream()
+                .map(mapper::toDomain)
+                .toList();
+    }
+
+    @Override
+    public void delete(UUID id) {
+        repository.deleteById(id);
     }
 }
